--- a/4-Hybrid Search Strategies/3-mmr.ipynb
+++ b/4-Hybrid Search Strategies/3-mmr.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "id": "3dce70b1",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "id": "3e54556a",
    "metadata": {},
    "outputs": [],
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "id": "734f62df",
    "metadata": {},
    "outputs": [
@@ -61,7 +61,7 @@
        " Document(metadata={'source': 'langchain_rag_dataset.txt'}, page_content='LangChain supports reranking retrieved results using LLMs or neural cross-encoders to improve context quality.')]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "id": "94001290",
    "metadata": {},
    "outputs": [],
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 21,
    "id": "d5268ca6",
    "metadata": {},
    "outputs": [],
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "20583587",
    "metadata": {},
    "outputs": [],
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 23,
    "id": "5756a52a",
    "metadata": {},
    "outputs": [],
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 24,
    "id": "184cc304",
    "metadata": {},
    "outputs": [],
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 25,
    "id": "c440d1fe",
    "metadata": {},
    "outputs": [
@@ -160,16 +160,18 @@
       "Answer:\n",
       " LangChain supports agents in two key ways:\n",
       "\n",
-      "1. **Tool Integration:** Agents can leverage external tools like calculators, search APIs, or custom functions based on instructions. This allows them to perform tasks beyond simple text generation.\n",
-      "2. **Decision Making:** LangChain enables LLMs to act as agents, determining which tool to use and in what sequence to accomplish a given task.\n",
+      "1. **Tool Integration:** Agents can utilize various tools like calculators, search APIs, or custom functions based on the instructions they receive. This allows them to perform tasks beyond simple text generation.\n",
       "\n",
-      "Regarding memory, LangChain offers:\n",
+      "2. **Decision Making:** LangChain empowers LLMs within agents to act as decision-makers. They can choose which tool to employ and the sequence in which to use them while completing a task.\n",
       "\n",
-      "1. **Conversational Memory:** `ConversationBufferMemory` allows agents to retain previous interactions, leading to more coherent multi-turn conversations.\n",
-      "2. **Summarization Memory:** `ConversationSummaryMemory` provides a concise summary of past interactions, aiding in contextual understanding. \n",
+      "Regarding memory, LangChain offers two primary memory options:\n",
+      "\n",
+      "1. **Conversational Memory:**  `ConversationBufferMemory` enables agents to retain previous interactions, ensuring coherence in multi-turn conversations.\n",
+      "\n",
+      "2. **Summarization Memory:** `ConversationSummaryMemory` condenses past interactions into summaries, providing a concise overview for the agent to reference. \n",
       "\n",
       "\n",
-      "Essentially, LangChain empowers agents with both the ability to access and utilize external tools and the memory necessary for making informed decisions and maintaining context within conversations. \n",
+      "This combination of tool integration and memory support allows LangChain agents to be more capable and context-aware. \n",
       "\n"
      ]
     }
@@ -181,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 26,
    "id": "01cafb2b",
    "metadata": {},
    "outputs": [
@@ -189,14 +191,14 @@
      "data": {
       "text/plain": [
        "{'input': 'How does Langchain support agents and memory?',\n",
-       " 'context': [Document(id='41f13ae6-8ab8-42fd-bd94-493d344673e6', metadata={'source': 'langchain_rag_dataset.txt'}, page_content='Memory in LangChain helps models retain previous interactions, making multi-turn conversations more coherent.\\nAgents in LangChain can use tools like calculators, search APIs, or custom functions based on the instructions they receive.'),\n",
-       "  Document(id='5a011857-5a48-467e-a2ad-200610bf8e38', metadata={'source': 'langchain_rag_dataset.txt'}, page_content='LangChain agents can interact with external APIs and databases, enhancing the capabilities of LLM-powered applications.\\nRAG pipelines in LangChain involve document loading, splitting, embedding, retrieval, and LLM-based response generation.'),\n",
-       "  Document(id='927dd9e9-ba5e-4f31-9751-05bb644bde4d', metadata={'source': 'langchain_rag_dataset.txt'}, page_content='LangChain allows LLMs to act as agents that decide which tool to call and in what order during a task.\\nLangChain supports conversational memory using ConversationBufferMemory and summarization memory with ConversationSummaryMemory.'),\n",
-       "  Document(id='01530f5e-27e1-4baf-a800-f1ba6bbe4668', metadata={'source': 'langchain_rag_dataset.txt'}, page_content='LangChain is an open-source framework designed to simplify the development of applications using large language models (LLMs).\\nLangChain provides abstractions for working with prompts, chains, memory, and agents, making it easier to build complex LLM-based systems.')],\n",
-       " 'answer': 'LangChain supports agents in two key ways:\\n\\n1. **Tool Integration:** Agents can leverage external tools like calculators, search APIs, or custom functions based on instructions. This allows them to perform tasks beyond simple text generation.\\n2. **Decision Making:** LangChain enables LLMs to act as agents, determining which tool to use and in what sequence to accomplish a given task.\\n\\nRegarding memory, LangChain offers:\\n\\n1. **Conversational Memory:** `ConversationBufferMemory` allows agents to retain previous interactions, leading to more coherent multi-turn conversations.\\n2. **Summarization Memory:** `ConversationSummaryMemory` provides a concise summary of past interactions, aiding in contextual understanding. \\n\\n\\nEssentially, LangChain empowers agents with both the ability to access and utilize external tools and the memory necessary for making informed decisions and maintaining context within conversations. \\n'}"
+       " 'context': [Document(id='abc23e29-fca0-4b8c-8f8b-6cb5367eca0c', metadata={'source': 'langchain_rag_dataset.txt'}, page_content='Memory in LangChain helps models retain previous interactions, making multi-turn conversations more coherent.\\nAgents in LangChain can use tools like calculators, search APIs, or custom functions based on the instructions they receive.'),\n",
+       "  Document(id='9769c4c7-848e-4908-bd36-7ea05ac09ba1', metadata={'source': 'langchain_rag_dataset.txt'}, page_content='LangChain agents can interact with external APIs and databases, enhancing the capabilities of LLM-powered applications.\\nRAG pipelines in LangChain involve document loading, splitting, embedding, retrieval, and LLM-based response generation.'),\n",
+       "  Document(id='d0cceef8-94ae-43d2-9cd0-3579c94bebfe', metadata={'source': 'langchain_rag_dataset.txt'}, page_content='LangChain allows LLMs to act as agents that decide which tool to call and in what order during a task.\\nLangChain supports conversational memory using ConversationBufferMemory and summarization memory with ConversationSummaryMemory.'),\n",
+       "  Document(id='bf5f42ff-46b7-48b1-af02-ccf090158c0f', metadata={'source': 'langchain_rag_dataset.txt'}, page_content='LangChain is an open-source framework designed to simplify the development of applications using large language models (LLMs).\\nLangChain provides abstractions for working with prompts, chains, memory, and agents, making it easier to build complex LLM-based systems.')],\n",
+       " 'answer': 'LangChain supports agents in two key ways:\\n\\n1. **Tool Integration:** Agents can utilize various tools like calculators, search APIs, or custom functions based on the instructions they receive. This allows them to perform tasks beyond simple text generation.\\n\\n2. **Decision Making:** LangChain empowers LLMs within agents to act as decision-makers. They can choose which tool to employ and the sequence in which to use them while completing a task.\\n\\nRegarding memory, LangChain offers two primary memory options:\\n\\n1. **Conversational Memory:**  `ConversationBufferMemory` enables agents to retain previous interactions, ensuring coherence in multi-turn conversations.\\n\\n2. **Summarization Memory:** `ConversationSummaryMemory` condenses past interactions into summaries, providing a concise overview for the agent to reference. \\n\\n\\nThis combination of tool integration and memory support allows LangChain agents to be more capable and context-aware. \\n'}"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
