--- a/2-Vectore Stores/4-PineConeVectorDB.ipynb
+++ b/2-Vectore Stores/4-PineConeVectorDB.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPJiaEvJEhVUdu0lMnxFC5V",
+      "authorship_tag": "ABX9TyOy5YFBIZKcnVj8/yG/Cjip",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -38,7 +38,7 @@
     {
       "cell_type": "code",
       "source": [
-        "api_key = \"pcsk_3vqrFF_6VPvYTNTkwHVVxZ1YzXqPi9oxNkooaqkFbKvUtfRDkN5ffMHci7qwd7UwC6hAgf\""
+        "api_key = \"\""
       ],
       "metadata": {
         "id": "9WwXUplm7dSL"
@@ -95,7 +95,7 @@
       "cell_type": "code",
       "source": [
         "from langchain_openai import OpenAIEmbeddings\n",
-        "embeddings = OpenAIEmbeddings(model = \"text-embedding-3-small\", dimensions=1024, api_key = \"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\")"
+        "embeddings = OpenAIEmbeddings(model = \"text-embedding-3-small\", dimensions=1024, api_key = \"\")"
       ],
       "metadata": {
         "id": "SWDLXe3c8SWZ"
